--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="icon" href="images/favicon-32x32.png">
+    <title>Best Car choices</title>
 </head>
 <body>
     <main class="cards">
